fix filter badge alignment

--- a/src/shared/FilterBox.scss
+++ b/src/shared/FilterBox.scss
@@ -21,6 +21,11 @@ div.FilterBox {
         border-radius: .25rem;
         transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
+
+    > * {
+        margin-inline: 0.125em;
+        align-self: baseline;
+    }
 }
 
 .badge:empty {
